--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
   </head>
+  
   <body>
     <div class="wrapper">
       <header>
@@ -17,6 +18,8 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <!-- Pretty sure that textarea needs to have the > at the end of the word textarea
+          to read as <textarea> as opposed to it closing it off after the other 4 lines of code inside of it-->
           <textarea
             readonly
             id="password"
@@ -29,6 +32,8 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="/assets/script.js"></script> 
   </body>
 </html>
+<!-- project has gitignore titled 'Blame', I need to research and figure out what that does and why it's in here -->
